--- a/src/components/auth/signin/css/styles.module.css
+++ b/src/components/auth/signin/css/styles.module.css
@@ -130,5 +130,5 @@
     width: 20px;
     height: 20px;
     cursor: pointer;
-    bottom: 0;
+    margin: 0;
 }
